[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/pic.png" type="Texture" id=1]
[ext_resource path="res://hullmyts.gd" type="Script" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://assets/ground.png" type="Texture" id=4]
[ext_resource path="res://TileMap.gd" type="Script" id=5]
[ext_resource path="res://assets/asdfblock.png" type="Texture" id=6]
[ext_resource path="res://assets/sky.png" type="Texture" id=7]
[ext_resource path="res://assets/kast.png" type="Texture" id=8]
[ext_resource path="res://assets/â˜ƒ.png" type="Texture" id=9]
[ext_resource path="res://assets/deepw.png" type="Texture" id=10]
[ext_resource path="res://assets/asdfback.png" type="Texture" id=11]
[ext_resource path="res://assets/kaktus.png" type="Texture" id=12]
[ext_resource path="res://assets/puu.png" type="Texture" id=13]
[ext_resource path="res://koll.tscn" type="PackedScene" id=14]
[ext_resource path="res://hud.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/luminemaa.png" type="Texture" id=16]
[ext_resource path="res://assets/kuusk.png" type="Texture" id=17]
[ext_resource path="res://assets/turbasammal.png" type="Texture" id=18]
[ext_resource path="res://assets/jungle.png" type="Texture" id=19]
[ext_resource path="res://assets/tundra.png" type="Texture" id=20]
[ext_resource path="res://assets/seaice.png" type="Texture" id=21]
[ext_resource path="res://assets/acacia.png" type="Texture" id=22]
[ext_resource path="res://kuld.tscn" type="PackedScene" id=23]
[ext_resource path="res://assets/wood.png" type="Texture" id=24]
[ext_resource path="res://assets/goldblock.png" type="Texture" id=25]
[ext_resource path="res://assets/kollivaremed.png" type="Texture" id=26]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 1, 1, 15, 1, 15, 15, 1, 15 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 1, 1, 15, 1, 15, 15, 1, 15 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=6]
0/name = "qhk"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "meri"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "muru"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "liiv"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 4 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "kivi"
4/texture = ExtResource( 11 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 5 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "lumi"
5/texture = ExtResource( 9 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 8 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "sygavmeri"
6/texture = ExtResource( 10 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 9 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "puu"
7/texture = ExtResource( 13 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "kaktus"
8/texture = ExtResource( 12 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "lumine maa"
9/texture = ExtResource( 16 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "kuusk"
10/texture = ExtResource( 17 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "turbasammal"
11/texture = ExtResource( 18 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 16, 16 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "jungle"
12/texture = ExtResource( 19 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 0, 16, 16 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "tundra"
13/texture = ExtResource( 20 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 0, 16, 16 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "merejxx"
14/texture = ExtResource( 21 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 0, 16, 16 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "akaatsia"
15/texture = ExtResource( 22 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 0, 0, 16, 16 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "puit"
16/texture = ExtResource( 24 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 0, 0, 16, 16 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "goldblock.png 17"
17/texture = ExtResource( 25 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 0, 0, 16, 16 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape = SubResource( 1 )
17/shape_one_way = false
17/shape_one_way_margin = 1.0
17/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
17/z_index = 0
18/name = "kollivaremed.png 18"
18/texture = ExtResource( 26 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 0, 0, 16, 16 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape = SubResource( 2 )
18/shape_one_way = false
18/shape_one_way_margin = 1.0
18/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
18/z_index = 0

[sub_resource type="CircleShape2D" id=7]
radius = 24.0

[node name="main" type="Node2D"]
script = ExtResource( 3 )
koll = ExtResource( 14 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 1, -1 )
scale = Vector2( 2, 2 )
tile_set = SubResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
script = ExtResource( 5 )
kuld = ExtResource( 23 )

[node name="generated" type="TileMap" parent="TileMap"]
scale = Vector2( 0.5, 0.5 )
format = 1

[node name="hullmyts" type="KinematicBody2D" parent="."]
position = Vector2( 100, 100 )
script = ExtResource( 2 )
kuld = ExtResource( 23 )

[node name="Sprite" type="Sprite" parent="hullmyts"]
position = Vector2( 16, 16 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hullmyts"]
position = Vector2( 16, 16 )
scale = Vector2( 1.09375, 1.09375 )
polygon = PoolVector2Array( 12.8, 12.8, 0, -12.8, 0, -12.8, -12.8, 12.8 )

[node name="Camera2D" type="Camera2D" parent="hullmyts"]
position = Vector2( 16, 16 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 20.0
drag_margin_left = 0.3
drag_margin_top = 0.3
drag_margin_right = 0.3
drag_margin_bottom = 0.3
editor_draw_limits = true

[node name="Area2D" type="Area2D" parent="hullmyts"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hullmyts/Area2D"]
position = Vector2( 16, 16 )
shape = SubResource( 7 )

[node name="Area2D2" type="Area2D" parent="hullmyts"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hullmyts/Area2D2"]
polygon = PoolVector2Array( 16, 2, 16, 2, 30, 32, 2, 32 )

[node name="hud" parent="." instance=ExtResource( 15 )]
layer = 2

[node name="kollid" type="Node2D" parent="."]

[node name="kullad" type="Node2D" parent="."]
[connection signal="pause" from="." to="TileMap" method="_on_main_pause"]
[connection signal="pause" from="." to="hullmyts" method="_on_main_pause"]
[connection signal="ehitus" from="TileMap" to="hud" method="_on_TileMap_ehitus"]
[connection signal="jahsaabehitada" from="TileMap" to="hud" method="_on_TileMap_jahsaabehitada"]
[connection signal="lammutus" from="TileMap" to="hud" method="_on_TileMap_lammutus"]
[connection signal="changechunk" from="hullmyts" to="TileMap" method="_on_hullmyts_changechunk"]
[connection signal="area_entered" from="hullmyts/Area2D" to="hullmyts" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="hullmyts/Area2D" to="hullmyts" method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="hullmyts/Area2D2" to="hullmyts" method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="hullmyts/Area2D2" to="hullmyts" method="_on_Area2D2_body_exited"]
[connection signal="ehitadasaab" from="hud" to="TileMap" method="_on_hud_ehitadasaab"]
[connection signal="lammutadasaab" from="hud" to="TileMap" method="_on_hud_lammutadasaab"]
